<resources>
    <string name="app_name">我的日记</string>
    <string name="action_settings">保存</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Journal Tips</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="favourite">已收藏</string>
    <string name="un_favourite">未收藏</string>
    <string name="choose_default_note">请选择日记本</string>
    <string name="ok">确定</string>
    <string name="location">位置</string>
    <string name="m_default">默认</string>
    <string name="m_favourite">收藏</string>
    <string name="tag">标签</string>
    <string name="journal_note">日记本</string>
    <string name="date">时间</string>
    <string name="setting">设置</string>
    <string name="on_this_day">那年今日</string>
    <string name="add">添加_</string>
    <string name="journal">日记</string>
    <string name="color">颜色</string>
    <string name="choose_color">选择颜色</string>
    <string name="create_new_journal_book">创建新的日记本</string>
    <string name="export_success">导出成功</string>
    <string name="send">发送</string>
</resources>
